cmake_minimum_required(VERSION 3.0)
project( computer_vision )
find_package( OpenCV REQUIRED )
find_package(nlohmann_json 3.2.0 REQUIRED)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
add_executable( computer_vision main.cpp )
target_link_libraries(computer_vision nlohmann_json::nlohmann_json )
target_link_libraries( computer_vision ${OpenCV_LIBS} m )
target_link_libraries (computer_vision Eigen3::Eigen)
